--- a/index.html
+++ b/index.html
@@ -1,20 +1,16 @@
 <!DOCTYPE html>
-<html>
-<title>W3.CSS</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="style.css">
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
+</head>
+
 <body>
+    <h1>Photo Card</h1>
 
-<div class="w3-container">
-  <h2>Photo Card</h2>
-
-  <div class="w3-card-4" style="width:50%">
-    <img src="image.jpg" alt="Alps" style="width:100%">
-    <div class="w3-container w3-center">
-      <p>The Italian / Austrian Alps</p>
-    </div>
-  </div>
-</div>
-
-</body>
+    <div class="A"><img src="image.jpg" alt=""></div>
+    <div class="B"><h2>The Italian / Austrian Alps</h2></div>
 </html>
