--- a/index.html
+++ b/index.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./style.css">
-</head>
-
-<body>
-    <h1>Photo Card</h1>
-
-    <div class="A"><img src="image.jpg" alt=""></div>
-    <div class="B"><h2>The Italian / Austrian Alps</h2></div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>photo card</title>
+    <!-- css style -->
+    <link rel="stylesheet" href="style.css" />
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+        </style>
+  </head>
+  <body>
+    <div class="maincontainer">
+      <h2>photo card</h2>
+    </div class="thesecondcontainer">
+    <img src="image.jpg" alt="" />
+    <div class="thethirdcontainer">
+      <p>alp mountains</p>
+    </div>
+  </body>
 </html>
